fixed dates and patient id in form

--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -2,51 +2,26 @@
 
 <%= link_to "Add Prescription", new_patient_prescription_path(@patient) %>
 
+
 <h3>Prescriptions</h3>
 <table class="table">
   <thead>
   <tr>
     <th>Name</th>
-  </tr>
-  </thead>
-  <tbody>
-
-    <tr>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-    </tr>
-
-  </tbody>
-  <thead>
-  <tr>
     <th>Dosage / Schedule</th>
-  </tr>
-  </thead>
-  <tbody>
-
-  <tr>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-  </tr>
-
-  </tbody>
-  <thead>
-  <tr>
     <th>Dates</th>
   </tr>
   </thead>
-  <tbody>
 
-  <tr>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-  </tr>
+  <tbody>
+  <%= @prescriptions.each do |prescription| %>
+    <tr>
+      <td><%= prescription.dosage%> every <%=prescription.schedule%></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <% end %>
+
 
   </tbody>
-</table>
+ </table>
