--- a/app/views/medications/show.html.erb
+++ b/app/views/medications/show.html.erb
@@ -15,7 +15,7 @@
   </thead>
 
   <tbody>
-  <%= @prescriptions.each do |prescription| %>
+  <% @prescriptions.each do |prescription| %>
 
   <tr>
     <td><%= prescription.patient_id %></td>
