--- a/app/views/prescriptions/new.html.erb
+++ b/app/views/prescriptions/new.html.erb
@@ -1,21 +1,26 @@
 <h1>Add a Subscription to <%=full_name(@patient)%></h1>
 
 <%= form_for @prescription, url: patient_prescriptions_path, method: :post do |f| %>
+  <% f.object.errors.full_messages.each do |error| %>
+    <div class="errors">
+      <%= error %>
+    </div>
+  <% end %>
 
 
-<%= f.label :Medication %>
+<%= f.label :medication %>
 <%= f.collection_select :medication_id, Medication.all, :id, :name %>
 
-<%= f.label :Dosage %>
+<%= f.label :dosage %>
 <%= f.text_field :dosage %>
 
-<%= f.label :Schedule %>
+<%= f.label :schedule %>
 <%= f.text_field :schedule %>
 
-<%= f.label :Starts_on %>
+<%= f.label :starts_on %>
 <%= f.date_select :starts_on %>
 
-<%= f.label :Ends_on %>
+<%= f.label :ends_on %>
 <%= f.date_select :ends_on %>
 
 <%= f.submit "Create Prescription" %>
